feat: getting product by id and renamed other endpoints
